--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,9 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '11'
-    - name: Run COBOL Check
+    - name: setup Mainframe Environment and Upload COBOL Check
       env:
         ZOWE_USERNAME: ${{secrets.ZOWE_USERNAME}}
         ZOWE_PASSWORD: ${{secrets.ZOWE_PASSWORD}}
-      run:
-        #Here we'll add our commands to run cobolcheck
-        echo "Running COBOL Check"
-        #Add actual cobolcheck commands here
+      run: | 
+        chmod +x .github/scripts/zowe_operations.sh
