--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,4 @@ jobs:
         ZOWE_PASSWORD: ${{secrets.ZOWE_PASSWORD}}
       run: | 
         chmod +x .github/scripts/zowe_operations.sh
+        .github/scripts/zowe_operations.sh
