--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '11'
+    - name: Install Zowe CLI
+      run: npm install -g @zowe/cli
     - name: setup Mainframe Environment and Upload COBOL Check
       env:
         ZOWE_USERNAME: ${{secrets.ZOWE_USERNAME}}
