--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,10 @@ jobs:
     - name: Set up Java
       uses: actions/setup-java@v2
       with:
-        distribution: 'temurin'
         java-version: '11'
-    - name: Install Zowe CLI
-      run: npm install -g @zowe/cli
-    - name: setup Mainframe Environment and Upload COBOL Check
+    - name: Run COBOL Check
       env:
         ZOWE_USERNAME: ${{secrets.ZOWE_USERNAME}}
         ZOWE_PASSWORD: ${{secrets.ZOWE_PASSWORD}}
       run: | 
-        chmod +x .github/scripts/zowe_operations.sh
-        .github/scripts/zowe_operations.sh
+        echo "Running COBOL check"     
